--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,19 @@ body {
 }
 
 /* SORT CSS */
+.above {
+  display: flex;
+  margin: 0px;
+}
 
+.playlist-total {
+  font-family: "Poetsen One", sans-serif;
+  color: #ff7518;
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: 50px;
+}
 .sort-container {
   margin: 20px 50px;
 }
@@ -206,7 +218,8 @@ li {
 
 .album {
   color: white;
-  margin-top: -20px;
+  margin-top: auto;
+  margin-bottom: 0px;
 }
 
 .artist {
